--- a/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
@@ -4,7 +4,7 @@
     +
   </button>
 
-  <h3 class="text-primary">tasks</h3>
+  <h3 class="text-primary"><a href="/my/tasks">tasks</a></h3>
 
   <h4>{{project.title}}</h4>
 
