--- a/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
@@ -9,12 +9,12 @@
   <h4>{{project.title}}</h4>
 
   <ul>
-    <li ng-repeat="task in subtasks">
+    <li ng-repeat="task in subtasks" ng-animate="'fade'">
 
       <input type="checkbox" name="checkbox" id="checkbox{{$index}}" ng-model="task.done" ng-change="taskChecked($index)">
       <label for="checkbox{{$index}}" class="done-{{task.done}}" eat-click ng-click="expandTask()">{{task.title}}</label>
 
-      <div task-content ng-show="showMe"></div>
+      <div task-content ng-show="showMe" ng-animate="'fade'"></div>
     </li>
   </ul>
 
