--- a/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/itemsList.html
@@ -18,7 +18,7 @@
         </li>
       </ul>
 
-      <div ng-show="showEditNewTag" new-tag></div>
+      <div ng-show="showEditNewTag" new-tag ng-animate="'fade'"></div>
 
     </li>
   </ul>
