--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,6 +1,6 @@
 <div class="em-animate" ng-animate="{{slideAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
   <h3 class="text-primary">extended mind</h3>
-  
+
   <div ng-hide="newItem.title" url-list ng-animate="'fade'"></div>
 
   <div class="row">
@@ -22,13 +22,13 @@
 
   <div>
     <div notes-list notesfilter="newItem.title">
-      <h4><a class="text-muted" href="my/notes" ng-click="swipeRight()">notes</a></h4>
+      <h4><a class="text-muted" href="my/notes">notes</a></h4>
     </div>
   </div>
 
   <div>
     <div tasks-list tasksfilter="newItem.title">
-      <h4><a class="text-muted" href="my/tasks" ng-click="swipeLeft()">tasks</a></h4>
+      <h4><a class="text-muted" href="my/tasks">tasks</a></h4>
     </div>
   </div>
 
