--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group">
       <div class="col-lg-offset-2 col-lg-10">
-        <button type="submit" class="btn btn-primary" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
+        <button type="submit" class="btn btn-primary" id="loginbutton" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
           log in
         </button>
       </div>
