--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -118,77 +118,36 @@ ul {
   color: gray;
 }
 
-@-webkit-keyframes slideInFromRight {
-0% { -webkit-transform: translate3d(100%, 0, 0); }
-100% { -webkit-transform: translate3d(0, 0, 0); }
-}
-@-webkit-keyframes slideOutToRight {
-0% { -webkit-transform: translate3d(0, 0, 0); }
-100% { -webkit-transform: translate3d(100%, 0, 0); }
-}
-@-webkit-keyframes slideInFromLeft {
-0% { -webkit-transform: translate3d(-100%,0,0); }
-100% { -webkit-transform: translate3d(0, 0, 0); }
-}
-@-webkit-keyframes slideOutToLeft {
-0% { -webkit-transform: translate3d(0,0,0); }
-100% { -webkit-transform: translate3d(-100%, 0, 0); }
-}
-@keyframes slideInFromRight {
-0% { transform: translate3d(100%, 0, 0); }
-100% { transform: translate3d(0, 0, 0); }
-}
-@keyframes slideOutToRight {
-0% { transform: translate3d(0, 0, 0); }
-100% { transform: translate3d(100%, 0, 0); }
-}
-@keyframes slideInFromLeft {
-0% { transform: translate3d(-100%,0,0); }
-100% { transform: translate3d(0, 0, 0); }
-}
-@keyframes slideOutToLeft {
-0% { transform: translate3d(0,0,0); }
-100% { transform: translate3d(-100%, 0, 0); }
-}
-
 .em-animate-enter-left, .em-animate-enter-right, .em-animate-leave-left, .em-animate-leave-right {
-  -webkit-animation-duration: 0.3s;
-  -webkit-animation-timing-function: ease;
-  animation-duration: 0.3s;
-  animation-timing-function: ease;
-  display: block;
+  -webkit-transition: -webkit-transform 0.3s ease-out;
   position: absolute;
 }
 
 .em-animate-enter-left {
+  -webkit-transform: translate3d(-100%,0,0) !important;
+
+  &.em-animate-enter-left-active {
+  -webkit-transform: translate3d(0,0,0) !important;
+  }
 }
-.em-animate-enter-left, .em-animate-enter-left-active {
-  -webkit-animation-name: slideInFromLeft;
-  animation-name: slideInFromLeft;
-}
-.em-animate-enter-right, .em-animate-enter-right-active {
-  -webkit-animation-name: slideInFromRight;
-  animation-name: slideInFromRight;
+.em-animate-leave-right, .em-animate-leave-left {
+  -webkit-transform: translate3d(0,0,0) !important;
+
+  &.em-animate-leave-right-active {
+  -webkit-transform: translate3d(100%,0,0) !important;
+  }
+
+  &.em-animate-leave-left-active {
+  -webkit-transform: translate3d(-100%,0,0) !important;
+  }
 }
 
-.em-animate-leave-left {
-}
+.em-animate-enter-right {
+  -webkit-transform: translate3d(100%,0,0) !important;
 
-.em-animate-leave-left, .em-animate-leave-active {
-  -webkit-animation-name: slideOutToLeft;
-  -webkit-transform: translate3d(-100%, 0, 0);
-  animation-name: slideOutToLeft;
-  transform: translate3d(-100%, 0, 0);
-}
-
-.em-animate-leave-right {
-}
-
-.em-animate-leave-right, .em-animate-leave-right {
-  -webkit-animation-name: slideOutToRight;
-  -webkit-transform: translate3d(100%, 0, 0);
-  animation-name: slideOutToRight;
-  transform: translate3d(100%, 0, 0);
+  &.em-animate-enter-right-active {
+  -webkit-transform: translate3d(0,0,0) !important;
+  }
 }
 
 .fade-hide, .fade-show {
