--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -31,6 +31,14 @@ html {
   display: inline-block;
 }
 
+.boxsizingBorder {
+  width: 100%;
+  height: 100%;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
 label {
   font-weight: normal;
 }
