Made slides draggable.

--- a/frontend/core/src/main/webapp/static/partials/my/notes.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes.html
@@ -1,4 +1,4 @@
-<div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
+<div draggable class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
   <h3 class="text-primary">notes</h3>
 
   <h4>inbox</h4>
