--- a/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
@@ -1,8 +1,7 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
-  <h3 class="text-primary">{{note.title}}</h3>
 
-  <div ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
-    <textarea class="boxsizingBorder"></textarea>
-  </div>
+  <h3 class="text-primary">{{note.title}}</h3>
+  <textarea class="boxsizingBorder" placeholder="description..." autofocus ng-model="note.content"></textarea>    
+
 
 </div>
