--- a/frontend/core/src/main/webapp/landing/em.css
+++ b/frontend/core/src/main/webapp/landing/em.css
@@ -52,8 +52,6 @@ body {
   background-color: #333333;
   text-align: center;
   color: white;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !important;
-  font-weight: 300 !important;
 }
 
 #wrap {
@@ -96,6 +94,12 @@ a:hover {
 .em-heading {
   margin-top: 5%;
   margin-bottom: 5%;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial,
+               "Lucida Grande", sans-serif;
+  font-weight: 300;
 }
 
 h1 {
