--- a/frontend/core/src/main/webapp/landing/em.css
+++ b/frontend/core/src/main/webapp/landing/em.css
@@ -1,35 +1,29 @@
 .embed-container {
-    position: relative;
-    padding-bottom: 56.25%;  /* 16/9 ratio */
-    padding-top: 30px; /* IE6 workaround*/
-    height: 0;
-    overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%; /* 16/9 ratio */
+  padding-top: 30px; /* IE6 workaround*/
+  height: 0;
+  overflow: hidden;
 }
 
-.embed-container iframe,
-.embed-container object,
-.embed-container embed {
-	position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.embed-container iframe, .embed-container object, .embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .embed-margin {
-	max-width: 90%;
-	margin-top: 2%;
-	margin-left: auto;
-    margin-right: auto;
+  max-width: 90%;
+  margin-top: 2%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .stich-top {
-  background-image:
-         -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%),
-         -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
-  background-image:
-         -moz-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%),
-         -moz-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
+  background-image: -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%), -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
+  background-image: -moz-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%), -moz-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
   left: 0px;
   right: 0px;
   height: 1px;
@@ -50,7 +44,6 @@ html, body {
 
 body {
   background-color: #333333;
-  text-align: center;
   color: white;
 }
 
@@ -59,8 +52,8 @@ body {
 }
 
 #waiting {
-  overflow:auto;
-  padding-bottom:150px; /* this needs to be bigger than footer height*/
+  overflow: auto;
+  padding-bottom: 150px; /* this needs to be bigger than footer height*/
 }
 
 #resultUpper {
@@ -71,23 +64,36 @@ body {
   position: relative;
   margin-top: -50px; /* negative value of footer height */
   height: 50px;
-  clear:both;
-  padding-top:20px;
+  clear: both;
+  padding-top: 20px;
+}
+
+/* Always center heading, inputs and footer */
+.em-input, .em-heading, .em-logo, .footer {
+  text-align: center;
+}
+
+.em-ingress, .em-please {
+  text-align: justify;
 }
 
 a:link {
-  text-decoration:none;
+  text-decoration: none;
 }
 a:hover {
-  text-decoration:underline;
+  text-decoration: underline;
 }
 
-.em-page{
+.footer a {
+  color: #d6d6d6 !important;
+}
+
+.em-page {
   margin-left: auto;
   margin-right: auto;
 }
 
-.em-topmargin{
+.em-topmargin {
   height: 20px;
 }
 
@@ -97,8 +103,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial,
-               "Lucida Grande", sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
 }
 
@@ -127,14 +132,7 @@ h3 {
 }
 
 .em-please {
-  text-align:justify;
   margin-bottom: 8%;
-}
-
-.em-ingress, .em-please {
-  padding-left:2%;
-  padding-right:2%;
-  text-align:justify;
 }
 
 h4 {
@@ -142,19 +140,18 @@ h4 {
   font-size: 30px;
 }
 
-h5{
+h5 {
   color: #676767;
   font-size: 25px;
 }
 
-input, button {
-  background-color: #d6d6d6 !important;
+.form-group {
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media (min-width: 767px) {
-  .form-group {
-    width: 490px;
-  }
+input, button {
+  background-color: #d6d6d6 !important;
 }
 
 .em-logo {
@@ -162,7 +159,62 @@ input, button {
   margin-bottom: 170px;
 }
 
-.footer a{
-  color: #d6d6d6 !important;
+
+/* Resolution specific definitions */
+
+@media (max-width: 1016px) {
+  .em-ingress, .em-please {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+
+@media (min-width: 1017px) {
+  .em-ingress, .em-please {
+    padding-left: 27%;
+    padding-right: 27%;
+  }
+}
+
+@media (max-width: 1199px) {
+  .em-ingress, .em-please {
+    padding-left: 22%;
+    padding-right: 22%;
+  }
+}
+
+@media (max-width: 991px) {
+  .em-ingress, .em-please {
+    padding-left: 14%;
+    padding-right: 14%;
+  }
+}
+
+@media (min-width: 520px) {
+  .form-group {
+    width: 490px;
+  }
+}
+
+@media (max-width: 600px) {
+  .em-ingress, .em-please {
+    padding-left: 10%;
+  }
+
+  h1 {
+    font-size: 45px;
+  }
+
+  h3 {
+    font-size: 30px;
+  }
+
+  h4 {
+    font-size: 25px;
+  }
+
+  h5 {
+    font-size: 20px;
+  }
 }
 
