Removed draggable directive from swipe slides.

--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,4 +1,4 @@
-<div draggable class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
+<div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
 
   <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
     +
@@ -23,5 +23,4 @@
     <div contexts-list></div>
   </div>
 
-</div>
 </div>
