--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,4 +1,4 @@
-<div draggable class="em-animate" ng-animate="{{slideAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
+<div class="em-animate" ng-animate="{{slideAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
   <h3 class="text-primary">extended mind</h3>
 
   <div ng-hide="newItem.title" url-list ng-animate="'fade'"></div>
