--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -1,5 +1,5 @@
-<div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
-
+<!-- <div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()"> -->
+<div class="em-animate" ng-animate="{{pageAnimation}}">
   <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
     +
   </button>
