--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -191,3 +191,33 @@ ul {
 .fade-show.fade-show-active {
   opacity: 1;
 }
+
+.rn-carousel-container {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+ul.rn-carousel-slides {
+  width: 100%;
+  height: 100%;
+  white-space: nowrap;
+  overflow: visible;
+  -webkit-transform: translate3d(0px, 0, 0);
+  -moz-transform: translate3d(0px, 0, 0);
+  transform: translate3d(0px, 0, 0);
+  padding: 0;
+  margin: 0;
+}
+ul.rn-carousel-slides li {
+  white-space: normal;
+  vertical-align: top;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+.rn-carousel-animate {
+  -webkit-transition: -webkit-transform 0.2s ease-out;
+  -moz-transition: -moz-transform 0.2s ease-out;
+  transition: transform 0.2s ease-out;
+}
