--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,13 +1,15 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}">
-  <ul rn-carousel class="image">
+
+  <ul rn-carousel >
     <li>
-      <div my-page>
+      <div my-page class="slide">
+    </li>
+<li>
+      <div tasks class="slide">
     </li>
     <li>
-      <div tasks>
-    </li>
-    <li>
-      <div notes>
+      <div notes class="slide">
     </li>
   </ul>
+
 </div>
