--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -23,11 +23,16 @@ html {
   height: 100%;
 }
 
+.slide{
+  width: 100%;
+  height: 100%;}
+
 .container {
   position: relative;
   width: 100%;
   height: 100%;
 }
+
 .row-fluid {
   width: 100%;
   height: 100%;
@@ -137,38 +142,6 @@ ul {
   color: gray;
 }
 
-.em-animate-enter-left, .em-animate-enter-right, .em-animate-leave-left, .em-animate-leave-right {
-  -webkit-transition: -webkit-transform 0.3s ease-out;
-  position: absolute;
-}
-
-.em-animate-enter-left {
-  -webkit-transform: translate3d(-100%,0,0) !important;
-
-  &.em-animate-enter-left-active {
-  -webkit-transform: translate3d(0,0,0) !important;
-  }
-}
-.em-animate-leave-right, .em-animate-leave-left {
-  -webkit-transform: translate3d(0,0,0) !important;
-
-  &.em-animate-leave-right-active {
-  -webkit-transform: translate3d(100%,0,0) !important;
-  }
-
-  &.em-animate-leave-left-active {
-  -webkit-transform: translate3d(-100%,0,0) !important;
-  }
-}
-
-.em-animate-enter-right {
-  -webkit-transform: translate3d(100%,0,0) !important;
-
-  &.em-animate-enter-right-active {
-  -webkit-transform: translate3d(0,0,0) !important;
-  }
-}
-
 .fade-hide, .fade-show {
   -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s;
   -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s;
@@ -190,34 +163,4 @@ ul {
 
 .fade-show.fade-show-active {
   opacity: 1;
-}
-
-.rn-carousel-container {
-  overflow: hidden;
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-ul.rn-carousel-slides {
-  width: 100%;
-  height: 100%;
-  white-space: nowrap;
-  overflow: visible;
-  -webkit-transform: translate3d(0px, 0, 0);
-  -moz-transform: translate3d(0px, 0, 0);
-  transform: translate3d(0px, 0, 0);
-  padding: 0;
-  margin: 0;
-}
-ul.rn-carousel-slides li {
-  white-space: normal;
-  vertical-align: top;
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-}
-.rn-carousel-animate {
-  -webkit-transition: -webkit-transform 0.2s ease-out;
-  -moz-transition: -moz-transform 0.2s ease-out;
-  transition: transform 0.2s ease-out;
 }
