Slide swipe in whole body.

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,14 +1,14 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}">
 
-  <ul rn-carousel >
+  <ul rn-carousel>
     <li>
-      <div my-page class="slide">
-    </li>
-<li>
-      <div tasks class="slide">
+      <div notes>
     </li>
     <li>
-      <div notes class="slide">
+      <div my-page>
+    </li>
+    <li>
+      <div tasks>
     </li>
   </ul>
 
