--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -23,10 +23,6 @@ html {
   height: 100%;
 }
 
-.slide{
-  width: 100%;
-  height: 100%;}
-
 .container {
   position: relative;
   width: 100%;
@@ -163,4 +159,13 @@ ul {
 
 .fade-show.fade-show-active {
   opacity: 1;
+}
+
+.asd{
+}
+
+.rn-carousel-container {
+}
+
+ul.rn-carousel-slides {
 }
