--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,11 +1,11 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}">
 
-  <ul rn-carousel>
-    <li>
-      <div notes>
-    </li>
+  <ul rn-carousel class="parent">
     <li>
       <div my-page>
+    </li>
+    <li>
+      <div notes>
     </li>
     <li>
       <div tasks>
