--- a/frontend/core/src/main/webapp/static/partials/myPage.html
+++ b/frontend/core/src/main/webapp/static/partials/myPage.html
@@ -32,7 +32,19 @@
       <h4><a class="text-muted" href="my/tasks">tasks</a></h4>
     </div>
   </div>
+  
+  <ul rn-carousel class="child">
+    <li>
+      slide #1
+    </li>
+    <li>
+      slide #2
+    </li>
+    <li>
+      slide #3
+    </li>
+  </ul>
 
   <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
-    
+
 </div>
