--- a/frontend/core/src/main/webapp/landing/em.css
+++ b/frontend/core/src/main/webapp/landing/em.css
@@ -32,13 +32,13 @@
 /* STITCHING */
 
 .stich-top {
-  background-image: -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%), -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
-  background-image: -moz-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%), -moz-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
+  background-image: -webkit-linear-gradient(0deg, #636363 60%, transparent 60%, transparent 100%), -webkit-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
+  background-image: -moz-linear-gradient(0deg, #636363 60%, transparent 60%, transparent 100%), -moz-linear-gradient(0deg, #5c5c5c 60%, transparent 60%, transparent 100%);
   left: 0px;
   right: 0px;
   height: 1px;
   background-repeat: repeat-x;
-  background-size: 40px 1px;
+  background-size: 20px 1px;
   background-position: 0px 0px, 0px 1px;
   -webkit-box-sizing: border-box;
   -moz-box-shadow: border-box;
@@ -138,7 +138,7 @@ h5 {
 }
 
 .em-topmargin {
-  height: 20px;
+  height: 10px;
 }
 
 .em-heading {
