--- a/frontend/core/src/main/webapp/landing/em.css
+++ b/frontend/core/src/main/webapp/landing/em.css
@@ -150,12 +150,21 @@ h5 {
   margin-bottom: 4%;
 }
 
-.em-ingress ul {
-  text-align: left;
-  list-style: square;
+.em-ingress p {
+  padding-bottom: 5%;
 }
 
-.em-ingress p {
+.em-your {
+  text-align: center;
+}
+
+.em-sff {
+  text-align: left;
+  padding-left: 42%;
+}
+
+.em-sff ul {
+  list-style: square;
   padding-bottom: 5%;
 }
 
@@ -172,7 +181,7 @@ input, button {
 }
 
 .em-logo {
-  margin-top: 7%;
+  margin-top: 4%;
   margin-bottom: 170px;
 }
 
@@ -194,6 +203,10 @@ input, button {
     padding-left: 5%;
     padding-right: 5%;
   }
+  .em-sff {
+    padding-left: 40%;
+  }
+
 }
 
 @media (min-width: 1017px) {
@@ -215,6 +228,9 @@ input, button {
     padding-left: 14%;
     padding-right: 14%;
   }
+  .em-sff {
+    padding-left: 35%;
+  }
 }
 
 @media (min-width: 520px) {
@@ -227,6 +243,11 @@ input, button {
   .em-ingress, .em-please {
     padding-left: 10%;
   }
+  
+  .em-sff {
+    padding-left: 25%;
+  }
+
 
   h1 {
     font-size: 40px;
