--- a/backend/src/main/resources/templates/requestInviteConfirmation.html
+++ b/backend/src/main/resources/templates/requestInviteConfirmation.html
@@ -1,4 +1,6 @@
-<h1>TODO</h1>
+<div style="">
+<h1 style="color:#228fd7;">TODO</h1>
 requestInviteConfirmation
 
 Check out your current <a href="queueNumberLink">queue number</a>.
+</div>
