First version of confirmation email

--- a/backend/src/main/resources/templates/requestInviteConfirmation.html
+++ b/backend/src/main/resources/templates/requestInviteConfirmation.html
@@ -1,6 +1,39 @@
-<div style="">
-<h1 style="color:#228fd7;">TODO</h1>
-requestInviteConfirmation
+<div style="font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight',
+'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue',
+Helvetica, Arial, 'Lucida Grande', sans-serif; text-align: center;">
+  <p>
+    <h1 style="color:#228fd7; font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight';
+    font-weight: 100; letter-spacing: 9px;"> simplify your life</h1>
+  </p>
+  <h4>
+  <p>
+    thank you for signing up on the extended mind beta waiting list
+  </p>
+  <p>
+    click <a href="queueNumberLink" style="color:#636363;">here</a> to check your status on the queue
+  </p>
+  <p>
+    we will let you know as soon as your extended mind is ready
+  </p>
+  <p>
+    meanwhile, check out our <a href="http://www.extendedmind.org" style="color:#636363;" target="_blank">blog</a>
+  </p></h4>
 
-Check out your current <a href="queueNumberLink">queue number</a>.
+  <h2><p style="color:#228fd7;">
+    awesome to have you on board!
+  </p></h2>
+
+  <p><img src="logoLink"/></p> 
+  <p><h2><a href="http://ext.md" target="_blank" style="color:#636363;">ext.md</a></h2> 
+  </p>
+ 
+  <p> 
+    <h5><a href="https://www.facebook.com/extmd" style="color:#636363;" target="_blank">facebook</a> | 
+        <a href="https://twitter.com/extmd" style="color:#636363;" target="_blank">twitter</a> | 
+        <a href="http://www.extendedmind.org" style="color:#636363;" target="_blank">blog</a> | 
+        <a href="mailto:info@ext.md" style="color:#636363;">contact</a></h5>
+    <br/>
+    <br/>
+  </p>
+
 </div>
