Swipe carousel with unique slide urls.

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,11 +1,11 @@
 <div class="em-animate" ng-animate="{{pageAnimation}}">
 
-  <ul rn-carousel class="parent">
-    <li>
-      <div my-page>
-    </li>
+  <ul rn-carousel rn-carousel-index="slide">
     <li>
       <div notes>
+    </li>
+    <li>
+      <div my-page>
     </li>
     <li>
       <div tasks>
