--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="MyController">
   <h2 class="text-primary">extended mind</h2>
 
   <div ng-hide="newItem.title" url-list ng-animate="'fade'"></div>
