--- a/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
@@ -1,9 +1,9 @@
-<div class="em-animate" ng-animate="{{pageAnimation}}" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
-  
+<div class="em-animate" ng-animate="{{pageAnimation}}">
+
   <button type="button" class="btn btn-default pull-right" ng-click="undoNoteEdit()">
     undo
   </button>
-  
+
   <h3 class="text-primary">{{note.title}}</h3>
 
   <form class="boxsizingBorder" role="form">
