--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -3,20 +3,26 @@ body {
   font-weight: 300;
   width: 100%;
   height: 100%;
-  font-size:25px;
+  font-size: 25px;
 }
 
-h1,h2,h3,h4{
+h1, h2, h3, h4 {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: 300;}
+  font-weight: 300;
+}
 
-h1{font-size:45px;}
-h2{font-size:30px;}
-h3{font-size:35px;}
-h4{font-size:25px;}
-
-// a{
-  // font-size:30px;}
+h1 {
+  font-size: 45px;
+}
+h2 {
+  font-size: 30px;
+}
+h3 {
+  font-size: 35px;
+}
+h4 {
+  font-size: 25px;
+}
 
 html {
   width: 100%;
@@ -41,6 +47,8 @@ html {
   width: 100%;
   height: 100%;
 }
+
+.nav, .pagination, .carousel a { cursor: pointer; }
 
 .boxsizingBorder {
   width: 100%;
@@ -159,17 +167,4 @@ ul {
 
 .fade-show.fade-show-active {
   opacity: 1;
-}
-
-.parent{
-z-index:0;
-}
-.child{
-z-index:+1;
-}
-
-.rn-carousel-container {
-}
-
-ul.rn-carousel-slides {
 }
