Fixed email confirmation, landing page ready

--- a/backend/src/main/resources/templates/requestInviteConfirmation.html
+++ b/backend/src/main/resources/templates/requestInviteConfirmation.html
@@ -414,9 +414,7 @@
                             <td class="mcnImageContent" valign="top" style="padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 0;text-align: center;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
 
 
-                                        <p align="center" alt="" width="376" style="max-width: 376px;padding-bottom: 0;display: inline !important;vertical-align: bottom;border: 0;line-height: 100%;outline: none;text-decoration: none;height: auto !important;" class="mcnImage">simplify your life</p>
-
-
+                                        <p align="center" alt="" width="376" style="font-size: 180%; color: #228fd7; font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight','HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; font-weight: 100; letter-spacing: 9px" class="heading">simplify your life</p>
                             </td>
                         </tr>
                     </tbody></table>
@@ -435,8 +433,7 @@
                                     <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;background-color: #FFFFFF;border-top: 0;border-bottom: 0;">
                                         <tr>
                                             <td valign="top" class="bodyContainer" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;"></td>
-                                        </tr>
-                                    </table>
+                                        </tr>                                    </table>
                                     <!-- // END BODY -->
                                 </td>
                             </tr>
@@ -481,12 +478,11 @@
                 <td valign="top" style="padding: 9px;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" class="mcnImageBlockInner">
                     <table align="left" width="100%" border="0" cellpadding="0" cellspacing="0" class="mcnImageContentContainer" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
                         <tbody><tr>
-                            <td class="mcnImageContent" valign="top" style="padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 0;text-align: center;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
-
+                            <td class="mcnImageContent" valign="top" style="padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 2%;text-align: center;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
                                     <a href="http://www.ext.md" title="" class="" target="_self" style="word-wrap: break-word !important;">
-                                        <img align="center" alt="" src="logoLink" width="301" style="max-width: 301px;padding-bottom: 0;display: inline !important;vertical-align: bottom;border: 0;line-height: 100%;outline: none;text-decoration: none;height: auto !important;" class="mcnImage">
+                                        <img align="center" alt="" src="logoLink" style="max-width: 301px;padding-bottom: 2%;display: inline !important;vertical-align: bottom;border: 0;line-height: 100%;outline: none;text-decoration: none;height: auto !important;" class="mcnImage"/><br/>
+                                        <a href="http://www.ext.md" target="_self" style="color: #606060;font-size: 150%; font-weight: normal; text-decoration: none;word-wrap: break-word !important;">ext.md</a>
                                     </a>
-
                             </td>
                         </tr>
                     </tbody></table>
