Header font size adjustment.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -60,10 +60,6 @@ html {
   height: 100% !important;
 }
 
-.inlineblock {
-  display: inline-block;
-}
-
 label {
   font-weight: normal;
 }
@@ -90,7 +86,7 @@ ul {
   list-style-type: none;
 }
 
-input[type=checkbox]:checked + label {
+input[type="checkbox"]:checked + label {
   text-decoration: line-through;
   color: gray;
 }
