--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,7 +1,10 @@
 <div ng-controller="MyController">
-  <h1 class="text-primary">extended mind</h1>
 
-  <div ng-hide="newItem.title" url-list ng-animate="'fade'"></div>
+  <div ng-hide="newItem.title">
+    <h1 class="text-primary">extended mind</h1>
+
+    <div url-list></div>
+  </div>
 
   <div class="row">
     <div class="col-lg-6">
